<resources>
    <string name="app_name">BarTrend</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_password_confirm">Confirm Password</string>

    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_cancel">Cancel</string>

    <string name="welcome">"Welcome !"</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>